--- a/ubuntu18.04-python3.7.2/Dockerfile
+++ b/ubuntu18.04-python3.7.2/Dockerfile
@@ -3,6 +3,8 @@ FROM ubuntu:18.04
 # use bash shell as default
 SHELL ["/bin/bash", "-c"]
 
+ENV TZ=asia/kolkata
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 # install python, pip and pipenv
 RUN apt-get update && \
     apt-get install -y sudo curl llvm git gcc make openssl libssl-dev libbz2-dev libreadline-dev libncurses5-dev libsqlite3-dev zlib1g-dev libffi-dev xz-utils tk-dev libxml2-dev libxmlsec1-dev liblzma-dev
